@@ -1,5 +1,10 @@
 # $Id$
 
+2005-09-24	Konstantin V. Arkhipov	<voxus@shadanakar.org>
+
+* main/DAOs/UnifiedContainer.class.php: do not throw ObjectNotFoundException
+on empty lists.
+
 2005-09-23	Konstantin V. Arkhipov	<voxus@shadanakar.org>
 
 * 0.2.2 released.
